objects/TW1_Estoque__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Brinde__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brinde</label>
        <referenceTo>TW1_Brinde__c</referenceTo>
        <relationshipLabel>Estoques</relationshipLabel>
        <relationshipName>Estoques</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Quantidade__c</fullName>
        <label>Quantidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <label>SGL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Estoques</relationshipLabel>
        <relationshipName>Estoques</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Stand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand</label>
        <referenceTo>TW1_Stand__c</referenceTo>
        <relationshipLabel>Estoques</relationshipLabel>
        <relationshipName>Estoques</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estoque Shopping</fullName>
                </value>
                <value>
                    <fullName>Estoque Stand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Estoque</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Brinde__c</columns>
        <columns>TW1_Quantidade__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Stand__c</columns>
        <columns>TW1_Tipo__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome do Estoque</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estoques</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>